swagger endpoints and fix
